--- a/sdp_project/templates/core/sale_list.html
+++ b/sdp_project/templates/core/sale_list.html
@@ -1,10 +1,8 @@
-{% extends "core/base.html" %}
-{% block title %}My Sales{% endblock %}
-{% block content %}
-  <h1>My Sales</h1>
-  <p><a href="{% url 'sale_add' %}">+ Add New Sale</a></p>
-  <table>
+<table>
+  <thead>
     <tr><th>Date</th><th>Amount</th><th>Description</th><th>Edit</th></tr>
+  </thead>
+  <tbody>
     {% for sale in sales %}
       <tr>
         <td>{{ sale.date }}</td>
@@ -15,5 +13,5 @@
     {% empty %}
       <tr><td colspan="4">No sales yet.</td></tr>
     {% endfor %}
-  </table>
-{% endblock %}
+  </tbody>
+</table>
