--- a/sdp_project/templates/core/about.html
+++ b/sdp_project/templates/core/about.html
@@ -1,5 +1,8 @@
 {% extends "core/base.html" %}
-{% load static %}
-
 {% block title %}About Us{% endblock %}
-
+{% block content %}
+<div class="container">
+  <h2>About the Developer</h2>
+  <p>Information about the developer or the project goes here.</p>
+</div>
+{% endblock %}
