--- a/sdp_project/templates/core/home.html
+++ b/sdp_project/templates/core/home.html
@@ -1,23 +1,11 @@
-{% extends "core/base.html" %}
-
-{% block title %}
-Home
-{% endblock %}
-
+{% extends 'core/base.html' %}
 {% block content %}
-<h1>Home Page</h1>
-<p>Welcome to your SDP prototype!</p>
-<!-- Hero Section (override in child if needed) -->
-<aside
-  class="bg-primary text-white p-4 d-none d-md-flex flex-column justify-content-center"
-  style="width: 35%"
->
-  {% block hero_title %}
-  <h1 class="display-5">Welcome to SDP Website</h1>
-  {% endblock %}
-
-  {% block hero_text %}
-  <p class="lead">Your project tagline or description here.</p>
-  {% endblock %}
-</aside>
+    {% comment %} Jumbotron hero section on home {% endcomment %}
+    <div class="jumbotron text-center bg-light">
+        <h1 class="display-4">Welcome to SaleApp!</h1>
+        <p class="lead">Find great deals or sell your items easily.</p>
+        <a class="btn btn-primary btn-lg" href="{% url 'browse_sales' %}" role="button">
+            Browse Sales
+        </a>
+    </div>
 {% endblock %}
