--- a/sdp_project/templates/core/create_sale.html
+++ b/sdp_project/templates/core/create_sale.html
@@ -1,24 +1,21 @@
-<!-- create_sale.html -->
 {% extends 'core/base.html' %}
+{% load static %}
+{% block title %}{% if sale %}Edit{% else %}Create{% endif %} Sale{% endblock %}
 {% block content %}
-<h2>Create New Sale</h2>
-<form method="POST" action="">
+<div class="container mt-4">
+  {% if sale %}
+    <h2>Edit Sale</h2>
+  {% else %}
+    <h2>Create Sale</h2>
+  {% endif %}
+  
+  <form method="post">
     {% csrf_token %}
-    {% comment %} Title field {% endcomment %}
-    <div class="form-group">
-        <label for="id_title">Title:</label>
-        <input type="text" name="title" id="id_title" class="form-control">
-    </div>
-    {% comment %} Description field {% endcomment %}
-    <div class="form-group">
-        <label for="id_description">Description:</label>
-        <textarea name="description" id="id_description" class="form-control" rows="3"></textarea>
-    </div>
-    {% comment %} Price field {% endcomment %}
-    <div class="form-group">
-        <label for="id_price">Price:</label>
-        <input type="number" name="price" id="id_price" class="form-control" step="0.01" min="0">
-    </div>
-    <button type="submit" class="btn btn-success">Submit Sale</button>
-</form>
+    {{ form.as_p }}
+    <button type="submit" class="btn btn-primary">
+      {% if sale %}Update{% else %}Create{% endif %} Sale
+    </button>
+    <a href="{% url 'browse_sales' %}" class="btn btn-secondary ms-2">Cancel</a>
+  </form>
+</div>
 {% endblock %}
