--- a/sdp_project/templates/core/base.html
+++ b/sdp_project/templates/core/base.html
@@ -18,20 +18,22 @@
     {# This is the navigation bar #}
     
     {% comment %} Main content block for child templates {% endcomment %}
-    <header >
-      <nav class="navbar navbar-expand-lg navbar-light bg-light px-4 fixed-top">
-        <a class="navbar-brand" href="{% url 'home' %}">SaleApp</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light px-4 fixed-top">
+        <div class="container-fluid" style="width:15%;">
+          <a class="navbar-brand" href="{% url 'home' %}">
+            <img src="{% static 'images/bootstrap-logo.svg' %}" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+            Insighter
+          </a>
+        </div>
+        <button class="navbar-toggler"
+               type="button" 
+               data-bs-toggle="collapse" 
+               data-bs-target="#navbarNav" 
+               aria-controls="navbarNav" 
+               aria-expanded="false" 
+               aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
       <header class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
@@ -44,7 +46,7 @@
               <a class="nav-link" href="{% url 'create_sale' %}">Create</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'browse_sales' %}">Browse</a>
+              <a class="nav-link" href="{% url 'browse_sales' %}">Sales</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'about' %}">About</a>
@@ -54,7 +56,26 @@
             </li>
           </ul>
         </div>
+        {% if not user.is_authenticated%}
+        <div class="container-fluid d-flex flex-nowrap" style="width:15%; margin-right: 0;">
+            <a class="btn btn-outline-primary me-2" href="{% url 'login' %}">Login</a>
+            <a class="btn btn-primary" href="{% url 'register' %}">Register</a>
+        </div>
+        {% else %}
+        <div class="container-fluid d-flex flex-nowrap" style="width:15%; margin-right: 0;">
+            <a class="btn btn-outline-primary me-2" href="{% url 'logout' %}">Logout</a>
+        </div>
+        {% endif %}
+        {% comment %} <div class="container-fluid" style="width:15%;">
+          <a class="btn btn-outline-primary me-2" href="{% url 'login' %}">Login</a>
+          <a class="btn btn-primary" href="{% url 'register' %}">Register</a>
+
+        {% comment %} <form class="container-fluid justify-content-start">
+          <button class="btn btn-outline-success me-2" type="button">Main button</button>
+          <button class="btn btn-sm btn-outline-secondary" type="button">Smaller button</button>
+        </form {% endcomment %}
       </nav>
+    
     </header>  
     <main class="flex-grow-1 my-4">
       <div class="container">
@@ -76,5 +97,6 @@
     <!-- Bootstrap JS and dependencies -->
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'js/popper.min.js' %}"></script>
 </body>
 </html>
