--- a/sdp_project/templates/core/browse_sale.html
+++ b/sdp_project/templates/core/browse_sale.html
@@ -11,27 +11,32 @@
           <th>ID</th>
           <th>Title</th>
           <th>Description</th>
-          <th>Price</th>
+          <th>Amount</th>
           <th>Created At</th>
           <th>Actions</th>
         </tr>
       </thead>
       <tbody>
-        {% for sale in sales %}
+        {% if sales %}
+          {% for sale in sales %}
         <tr>
           <td>{{ sale.id }}</td>
           <td>{{ sale.title }}</td>
-          <td>{{ sale.description }}</td>
-          <td>${{ sale.price }}</td>
+          <td>{{ sale.description}}</td>
+          <td>${{ sale.amount }}</td>
           <td>{{ sale.created_at }}</td>
           <td>
             <a href="{% url 'edit_sale' sale.id %}" class="btn btn-sm btn-outline-primary">Edit</a>
           </td>
         </tr>
-        {% empty %}
-        <tr><td colspan="6">No sales found.</td></tr>
         {% endfor %}
+        {% else %}
+        <tr><td colspan="6">No sales found.</td></tr>
+        {% endif %}
       </tbody>
+    </table>
+    <table class="table table-striped">
+
     </table>
   </div>
 </div>
