--- a/sdp_project/templates/core/login_and_register.html
+++ b/sdp_project/templates/core/login_and_register.html
@@ -29,7 +29,7 @@ In{% endblock %}
   </ul>
   <div class="tab-content" id="myTabContent">
     
-    <div class="tab-pane fade show active" id="login-tab-pane" role="tabpanel" aria-labelledby="login-tab" tabindex="0">
+  <div class="tab-pane fade show active" id="login-tab-pane" role="tabpanel" aria-labelledby="login-tab" tabindex="0">
       <form method="post" action="{% url 'login' %}" class="row g-3">
         {% csrf_token %}
         <div class="mb-3">
@@ -43,8 +43,11 @@ In{% endblock %}
         <div class="col-12">
           <button type="submit" class="btn btn-primary w-100">Sign in</button>
         </div>
+        {% if login_error %}
+        <div class="alert alert-danger">{{ login_error }}</div>
+        {% endif %}
       </form>
-    </div>
+  </div>
     
   <div class="tab-pane fade" id="register-tab-pane" role="tabpanel" aria-labelledby="register-tab" tabindex="0">
       <form method="post" action="{% url 'register' %}" class="row g-3">
@@ -68,8 +71,11 @@ In{% endblock %}
         <div class="col-12">
           <button type="submit" class="btn btn-primary w-100">Register</button>
         </div>
+        {% if register_error %}
+        <div class="alert alert-danger">{{ register_error }}</div>
+        {% endif %}
       </form>
-    </div>
+  </div>
   </div>
       </form>
     </div>
