--- a/sdp_project/templates/core/base.html
+++ b/sdp_project/templates/core/base.html
@@ -35,7 +35,8 @@
       <span class="navbar-toggler-icon"></span>
     </button>
       <header class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
+        {% if user.is_authenticated%}  
+        <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link" href="{% url 'home' %}">Home</a>
             </li>
@@ -48,6 +49,7 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'browse_sales' %}">Sales</a>
             </li>
+        
             <li class="nav-item">
               <a class="nav-link" href="{% url 'about' %}">About</a>
             </li>
@@ -55,6 +57,19 @@
               <a class="nav-link" href="{% url 'contact' %}">Contact</a>
             </li>
           </ul>
+        {% else %}
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'home' %}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'about' %}">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+            </li>
+          </ul>
+        {% endif %}
         </div>
         {% if not user.is_authenticated%}
         <div class="container-fluid d-flex flex-nowrap" style="width:15%; margin-right: 0;">
