Refactor URL routing and views: add sale deletion functionality, enhance sales listing UI, and improve home page styling.

--- a/sdp_project/templates/core/home.html
+++ b/sdp_project/templates/core/home.html
@@ -2,7 +2,7 @@
 
 {% block content %} {% comment %} Jumbotron hero section on home {% endcomment %}
 
-<div class="jumbotron text-left bg-light w-auto px-3 mb-4 rounded-3 border">
+<div class="jumbotron text-left bg-light w-auto px-3 mb-4 rounded-3 border" style="height: 601.6px;">
   <div class="p-5 text-center bg-body-tertiary rounded-10">
     <svg
       class="bi mt-4 mb-3"
