--- a/sdp_project/templates/core/browse_sale.html
+++ b/sdp_project/templates/core/browse_sale.html
@@ -4,22 +4,22 @@
 {% block content %}
 <div class="container mt-4">
   <h2>Sales</h2>
-  <div class="table-responsive">
-    <table class="table table-striped table-hover">
-      <thead class="table-light">
-        <tr>
-          <th>ID</th>
-          <th>Title</th>
-          <th>Description</th>
-          <th>Amount</th>
-          <th>Created At</th>
-          <th>Actions</th>
+  <div class="table-responsive table-bordered border rounded-3 shadow-sm p-2 mb-5 bg-body rounded">
+    <table class="table table-striped table-hover rounded-3 table-bordered border rounded-3 p-2">
+      <thead class="table-light border-bottom-0">
+        <tr class="table-primary color-primary-emphasis text-color">
+          <th scope="col">ID</th>
+          <th scope="col">Title</th>
+          <th scope="col">Description</th>
+          <th scope="col">Amount</th>
+          <th scope="col">Created At</th>
+          <th scope="col">Actions</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody class="table-group-divider">
         {% if sales %}
           {% for sale in sales %}
-        <tr>
+        <tr scope="row">
           <td>{{ sale.id }}</td>
           <td>{{ sale.title }}</td>
           <td>{{ sale.description}}</td>
@@ -27,6 +27,10 @@
           <td>{{ sale.created_at }}</td>
           <td>
             <a href="{% url 'edit_sale' sale.id %}" class="btn btn-sm btn-outline-primary">Edit</a>
+            <form action="{% url 'delete_sale' sale.id %}" method="post" style="display:inline;">
+              {% csrf_token %}
+              <button type="submit" class="btn btn-sm btn-outline-danger" onclick="return confirm('Are you sure you want to delete this sale?');">Delete</button>
+            </form>
           </td>
         </tr>
         {% endfor %}
@@ -35,9 +39,9 @@
         {% endif %}
       </tbody>
     </table>
-    <table class="table table-striped">
-
-    </table>
+    <div class="text-end">
+      <a href="{% url 'create_sale' %}" class="btn btn-primary">Create Sale</a>
+    </div>
   </div>
 </div>
 {% endblock %}
