Refactor project structure and update templates
- Deleted unused report files (Report2.out, Report2.tex, Report2.toc).
- Updated README to remove outdated profile link and adjust sales URLs.
- Modified base template (base.html) for improved layout and responsiveness, including new styles and navbar adjustments.
- Enhanced child templates (home.html, create_sale.html, browse_sale.html) for better structure and user experience.
- Added SVG icons for social media (Facebook, Instagram, Twitter) to enhance footer.
- Updated database (db.sqlite3) to reflect recent changes in models and data.

--- a/sdp_project/templates/core/home.html
+++ b/sdp_project/templates/core/home.html
@@ -1,8 +1,8 @@
-{% extends "core/base.html" %} {% block title %}Home{% endblock %} 
-
+{% extends "core/base.html" %} 
+{% block title %}Home{% endblock %} 
 {% block content %} {% comment %} Jumbotron hero section on home {% endcomment %}
 
-<div class="jumbotron text-left bg-light w-auto px-3 mb-4 rounded-3 border" style="height: 601.6px;">
+<div class="jumbotron text-left bg-light px-3 mb-4 rounded-3 border" style="height: 601.6px;">
   <div class="p-5 text-center bg-body-tertiary rounded-10">
     <svg
       class="bi mt-4 mb-3"
@@ -44,7 +44,7 @@
 </div>
 {% if user.is_authenticated %}
   <div class="row align-items-md-stretch">
-    <div class="col-md-6">
+    <div class="col-md-6 pb-2">   
       <div class="h-100 p-5 text-bg-dark rounded-3">
         <h2>Change the background</h2>
         <p>
@@ -60,7 +60,7 @@
         >
       </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6 pb-2">
       <div class="h-100 p-5 bg-body-tertiary border rounded-3">
         <h2>Add borders</h2>
         <p>
