--- a/sdp_project/templates/core/browse_sale.html
+++ b/sdp_project/templates/core/browse_sale.html
@@ -1,12 +1,17 @@
-{% extends 'core/base.html' %}
-{% load static %}
-{% block title %}Sales List{% endblock %}
-{% block content %}
-<div class="container mt-4">
+{% extends 'core/base.html' %} 
+{% load static %} 
+{% block title %}
+Sales List
+{%endblock %} {% block content %}
+<div class="container">
   <h2>Sales</h2>
-  <div class="table-responsive table-bordered border rounded-3 shadow-sm p-2 mb-5 bg-body rounded">
-    <table class="table table-striped table-hover rounded-3 table-bordered border rounded-3 p-2">
-      <thead class="table-light border-bottom-0">
+  <div
+    class="table-responsive table-bordered border rounded-3 shadow-sm p-2 mb-5 bg-body rounded"
+  >
+    <table
+      class="table table-striped table-hover rounded-3 table-bordered border rounded-3 p-2"
+    >
+      <thead class="table-dark">
         <tr class="table-primary color-primary-emphasis text-color">
           <th scope="col">ID</th>
           <th scope="col">Title</th>
@@ -17,25 +22,40 @@
         </tr>
       </thead>
       <tbody class="table-group-divider">
-        {% if sales %}
+        {% if sales %} 
           {% for sale in sales %}
         <tr scope="row">
           <td>{{ sale.id }}</td>
           <td>{{ sale.title }}</td>
           <td>{{ sale.description}}</td>
-          <td>${{ sale.amount }}</td>
+          <td>UGX {{ sale.amount }}</td>
           <td>{{ sale.created_at }}</td>
           <td>
-            <a href="{% url 'edit_sale' sale.id %}" class="btn btn-sm btn-outline-primary">Edit</a>
-            <form action="{% url 'delete_sale' sale.id %}" method="post" style="display:inline;">
+            <a
+              href="{% url 'edit_sale' sale.id %}"
+              class="btn btn-sm btn-outline-primary"
+              >Edit</a
+            >
+            <form
+              action="{% url 'delete_sale' sale.id %}"
+              method="post"
+              style="display: inline"
+            >
               {% csrf_token %}
-              <button type="submit" class="btn btn-sm btn-outline-danger" onclick="return confirm('Are you sure you want to delete this sale?');">Delete</button>
+              <button
+                type="submit"
+                class="btn btn-sm btn-outline-danger"
+                onclick="return confirm('Are you sure you want to delete this sale?');"
+              >
+                Delete
+              </button>
             </form>
           </td>
         </tr>
-        {% endfor %}
-        {% else %}
-        <tr><td colspan="6">No sales found.</td></tr>
+        {% endfor %} {% else %}
+        <tr>
+          <td colspan="6">No sales found.</td>
+        </tr>
         {% endif %}
       </tbody>
     </table>
