--- a/sdp_project/templates/core/create_sale.html
+++ b/sdp_project/templates/core/create_sale.html
@@ -1,6 +1,6 @@
 {% extends 'core/base.html' %} {% load static %} {% block title %} {% if sale%}
 Edit {% else %} Create {% endif %} Sale {% endblock %} {% block content %}
-<div class="container mt-4">
+<div class="container">
   {% if sale %}
   <h2>Edit Sale</h2>
   {% else %}
@@ -35,6 +35,7 @@ Edit {% else %} Create {% endif %} Sale {% endblock %} {% block content %}
       <label for="amount" class="form-label">Amount</label>
       <input
         type="number"
+        min=0
         class="form-control"
         id="amount"
         name="amount"
